logs_cognitive_hmuse0/training_mmse_roi0.log
[KeOps] Compiling cuda jit compiler engine ... 
[KeOps] Warning : There were warnings or errors compiling formula :
In file included from /home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:21:0:
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp: In function ‘int Compile(const char*, const char*, int, int, const char*)’:
<command-line>:0:20: error: ‘nvrtcGetCUBINSize’ was not declared in this scope
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:90:21: note: in expansion of macro ‘nvrtcGetTARGETSize’
     NVRTC_SAFE_CALL(nvrtcGetTARGETSize(prog, &targetSize));
                     ^~~~~~~~~~~~~~~~~~
<command-line>:0:20: note: suggested alternative: ‘nvrtcGetPTXSize’
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:90:21: note: in expansion of macro ‘nvrtcGetTARGETSize’
     NVRTC_SAFE_CALL(nvrtcGetTARGETSize(prog, &targetSize));
                     ^~~~~~~~~~~~~~~~~~
<command-line>:0:16: error: ‘nvrtcGetCUBIN’ was not declared in this scope
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:93:21: note: in expansion of macro ‘nvrtcGetTARGET’
     NVRTC_SAFE_CALL(nvrtcGetTARGET(prog, target));
                     ^~~~~~~~~~~~~~
<command-line>:0:16: note: suggested alternative: ‘nvrtcGetPTX’
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:93:21: note: in expansion of macro ‘nvrtcGetTARGET’
     NVRTC_SAFE_CALL(nvrtcGetTARGET(prog, target));
                     ^~~~~~~~~~~~~~

OK
Loading data from ./data/subjectsamples_longclean_mmse_dlmuse_allstudies.csv
Loaded 2449 subjects
Loading train IDs from ./data/train_subject_allstudies_ids_mmse0.pkl
Loading test IDs from ./data/test_subject_allstudies_ids_mmse0.pkl
Train IDs: 1959
Test IDs: 490
Train data shape: (7783,)
Test data shape: (1932,)
Processed Train Data: torch.Size([7783, 154])
Processed Test Data: torch.Size([1932, 154])
Final shapes - Train Y: torch.Size([7783]) Test Y: torch.Size([1932])
depth [(154, 77)]
final layer (154, 77)
Final Layer 154 77
Training for 200 iterations...
Iteration 50/200 - Loss: 0.822
Iteration 100/200 - Loss: 0.817
Iteration 150/200 - Loss: 0.825
Iteration 200/200 - Loss: 0.847

Results for ROI 0:
MAE: 0.3489
MSE: 0.2955
RMSE: 0.5436
R²: 0.6975
Coverage: 0.9493
Interval Width: 2.2401

Model and results saved to ./models_cognitive/mmse
Training completed in 12.04 seconds
